--- a/environment.yml
+++ b/environment.yml
@@ -4,222 +4,222 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _py-xgboost-mutex=2.0=cpu_0
-  - absl-py=0.7.1=py36_0
-  - appnope=0.1.0=py36_1000
-  - arrow=0.13.1=py36_0
-  - asn1crypto=0.24.0=py36_1003
-  - astor=0.7.1=py_0
-  - atomicwrites=1.3.0=py_0
-  - attrs=19.1.0=py_0
-  - backcall=0.1.0=py_0
-  - beautifulsoup4=4.7.1=py36_1001
-  - blas=1.0=mkl
-  - bleach=3.1.0=py_0
-  - blinker=1.4=py36_0
-  - bokeh=1.1.0=py36_0
-  - boto=2.49.0=py36_0
-  - boto3=1.9.134=py_0
-  - botocore=1.12.134=py_0
-  - bz2file=0.98=py36_1
-  - ca-certificates=2019.3.9=hecc5488_0
-  - certifi=2019.3.9=py36_0
-  - cffi=1.12.3=py36hccf1714_0
-  - chardet=3.0.4=py36_1003
-  - click=7.0=py_0
-  - cryptography=2.6.1=py36h212c5bf_0
-  - cycler=0.10.0=py_1
-  - cymem=2.0.2=py36h04f5b5a_0
-  - cytoolz=0.9.0.1=py36h1de35cc_1001
-  - dbus=1.13.6=h90a0687_0
-  - decorator=4.4.0=py_0
-  - defusedxml=0.5.0=py_1
-  - dill=0.2.9=py36_0
-  - docutils=0.14=py36hbfde631_0
-  - entrypoints=0.3=py36_1000
-  - expat=2.2.6=h0a44026_0
-  - flask=1.0.2=py_2
-  - flask-cors=3.0.7=py_0
-  - freetype=2.9.1=hb4e5f40_0
-  - future=0.17.1=py36_1000
-  - gast=0.2.2=py_0
-  - gensim=3.4.0=py36h1de35cc_0
-  - gettext=0.19.8.1=h15daf44_3
-  - glib=2.56.2=hd9629dc_0
-  - glm=0.9.9.4=h770b8ee_0
-  - grpcio=1.12.1=py36hd9629dc_0
-  - gunicorn=19.9.0=py36_0
-  - h5py=2.9.0=nompi_py36h35dc34b_1102
-  - hdf5=1.10.4=nompi_h0cbb7df_1106
-  - icu=58.2=h4b95b61_1
-  - idna=2.8=py36_1000
-  - imbalanced-learn=0.4.3=py_0
-  - intel-openmp=2019.3=199
-  - ipykernel=5.1.0=py36h24bf2e0_1002
-  - ipython=7.4.0=py36h24bf2e0_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.4.2=py_0
-  - itsdangerous=1.1.0=py_0
-  - jedi=0.13.3=py36_0
-  - jinja2=2.10.1=py_0
-  - jmespath=0.9.4=py_0
-  - joblib=0.13.2=py36_0
-  - jpeg=9b=he5867d9_2
-  - jsonschema=3.0.1=py36_0
-  - jupyter=1.0.0=py_2
-  - jupyter_client=5.2.4=py_3
-  - jupyter_console=6.0.0=py_0
-  - jupyter_contrib_core=0.3.3=py_2
-  - jupyter_contrib_nbextensions=0.5.1=py36_0
-  - jupyter_core=4.4.0=py_0
-  - jupyter_highlight_selected_word=0.2.0=py36_1000
-  - jupyter_latex_envs=1.4.4=py36_1000
-  - jupyter_nbextensions_configurator=0.4.1=py36_0
-  - keras=2.2.4=py36_0
-  - keras-applications=1.0.4=py_1
-  - keras-preprocessing=1.0.2=py_1
-  - kiwisolver=1.0.1=py36h04f5b5a_1002
-  - krb5=1.16.1=hddcf347_7
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - libgfortran=3.0.1=h93005f0_2
-  - libgpuarray=0.7.6=h1de35cc_1003
-  - libiconv=1.15=hdd342a3_7
-  - libpng=1.6.36=ha441bb4_0
-  - libpq=11.2=h051b688_0
-  - libprotobuf=3.7.1=hfbae3c0_0
-  - libsodium=1.0.16=h3efe00b_0
-  - libtiff=4.0.9=he6b73bb_1
-  - libxgboost=0.82=h6de7cb9_0
-  - libxml2=2.9.8=hf14e9c8_1005
-  - libxslt=1.1.32=h33a18ac_1002
-  - line_profiler=2.1.2=py36h1de35cc_1002
-  - llvm-openmp=4.0.1=hcfea43d_1
-  - lxml=4.3.3=py36h08abf6f_0
-  - mako=1.0.7=py_1
-  - markdown=2.6.11=py_0
-  - markupsafe=1.1.1=py36h1de35cc_0
-  - matplotlib=3.0.3=py36_0
-  - matplotlib-base=3.0.3=py36hf043ca5_0
-  - memory_profiler=0.55.0=py_0
-  - metis=5.1.0=h0a44026_1003
-  - mistune=0.8.4=py36h1de35cc_1000
-  - mkl=2019.3=199
-  - mkl_fft=1.0.12=py36h1de35cc_0
-  - mkl_random=1.0.2=py36h1702cab_2
-  - mlxtend=0.13.0=py_1
-  - more-itertools=4.3.0=py36_1000
-  - msgpack-numpy=0.4.3.2=py_0
-  - msgpack-python=0.6.1=py36h04f5b5a_0
-  - murmurhash=1.0.0=py36h0a44026_0
-  - nbconvert=5.4.1=py_2
-  - nbformat=4.4.0=py_1
-  - ncurses=6.1=h0a44026_1
-  - nltk=3.4.1=py36_0
-  - nose=1.3.7=py36_1002
-  - notebook=5.7.8=py36_0
-  - numpy=1.16.2=py36hacdab7b_0
-  - numpy-base=1.16.2=py36h6575580_0
-  - oauthlib=3.0.1=py_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1b=h01d97ff_2
-  - packaging=19.0=py_0
-  - pandas=0.24.2=py36h0a44026_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.4.0=py_0
-  - patsy=0.5.1=py_0
-  - pcre=8.43=h0a44026_0
-  - pexpect=4.7.0=py36_0
-  - pickleshare=0.7.5=py36_1000
-  - pillow=5.4.1=py36hb68e598_0
-  - pip=19.1=py36_0
-  - plac=0.9.6=py_1
-  - pluggy=0.9.0=py_0
-  - preshed=2.0.1=py36h0a44026_0
-  - progressbar2=3.38.0=py_1
-  - prometheus_client=0.6.0=py_0
-  - prompt_toolkit=2.0.9=py_0
-  - protobuf=3.7.1=py36h6de7cb9_0
-  - psutil=5.6.1=py36h1de35cc_0
-  - psycopg2=2.8.2=py36h212c5bf_0
-  - ptyprocess=0.6.0=py_1001
-  - py=1.8.0=py_0
-  - py-xgboost=0.82=py36h6de7cb9_0
-  - pycparser=2.19=py36_1
-  - pygam=0.8.0=py_0
-  - pygments=2.3.1=py_0
-  - pygpu=0.7.6=py36h917ab60_1000
-  - pyjwt=1.7.1=py36_0
-  - pymongo=3.7.2=py36h0a44026_0
-  - pyopenssl=19.0.0=py36_0
-  - pyparsing=2.4.0=py_0
-  - pyqt=5.9.2=py36h655552a_2
-  - pyrsistent=0.14.11=py36h1de35cc_0
-  - pysocks=1.6.8=py36_1002
-  - pytest=4.4.1=py36_0
-  - pytest-runner=4.4=py_0
-  - python=3.6.8=haf84260_0
-  - python-dateutil=2.8.0=py_0
-  - python-utils=2.3.0=py_1
-  - pytz=2019.1=py_0
-  - pyyaml=5.1=py36h1de35cc_0
-  - pyzmq=18.0.1=py36h2d07e9b_1
-  - qt=5.9.7=h468cd18_1
-  - qtconsole=4.4.3=py_0
-  - readline=7.0=h1de35cc_5
-  - regex=2018.01.10=py36h1de35cc_1000
-  - requests=2.21.0=py36_1000
-  - requests-oauthlib=1.2.0=py_0
-  - retrying=1.3.3=py_2
-  - s3transfer=0.2.0=py36_0
-  - scikit-learn=0.20.3=py36h27c97d8_0
-  - scikit-sparse=0.4.4=py36h917ab60_1000
-  - scikit-surprise=1.0.6=py36h917ab60_1001
-  - scipy=1.2.1=py36h1410ff5_0
-  - seaborn=0.9.0=py_0
-  - selenium=3.141.0=py36h1de35cc_1000
-  - send2trash=1.5.0=py_0
-  - setuptools=41.0.0=py36_0
-  - sip=4.19.8=py36h0a44026_1000
-  - six=1.12.0=py36_1000
-  - smart_open=1.8.2=py_0
-  - soupsieve=1.9.1=py36_0
-  - spacy=2.0.18=py36h0a44026_1000
-  - sqlalchemy=1.3.3=py36h1de35cc_0
-  - sqlite=3.27.2=ha441bb4_0
-  - statsmodels=0.9.0=py36h917ab60_1000
-  - suitesparse=5.2.0=h7413580_0
-  - tbb=2019.4=h04f5b5a_0
-  - tensorboard=1.10.0=py36_0
-  - tensorflow=1.10.0=py36_0
-  - termcolor=1.1.0=py_2
-  - terminado=0.8.2=py36_0
-  - testpath=0.4.2=py_1001
-  - theano=1.0.3=py36_0
-  - thinc=6.12.1=py36h1702cab_1000
-  - tk=8.6.8=ha441bb4_0
-  - toolz=0.9.0=py_1
-  - tornado=6.0.2=py36h01d97ff_0
-  - tqdm=4.32.0=py_0
-  - traitlets=4.3.2=py36_1000
-  - tweepy=3.6.0=py36_0
-  - ujson=1.35=py36h1de35cc_1001
-  - urllib3=1.24.2=py36_0
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - werkzeug=0.15.2=py_0
-  - wheel=0.33.1=py36_0
-  - widgetsnbextension=3.4.2=py36_1000
-  - wrapt=1.10.11=py36h1de35cc_1001
-  - xgboost=0.82=py36h6de7cb9_0
-  - xlrd=1.2.0=py_0
-  - xz=5.2.4=h1de35cc_4
-  - yaml=0.1.7=h1de35cc_1001
-  - zeromq=4.3.1=h0a44026_3
-  - zlib=1.2.11=h1de35cc_3
+  - _py-xgboost-mutex=2.0
+  - absl-py=0.7.1
+  - appnope=0.1.0
+  - arrow=0.13.1
+  - asn1crypto=0.24.0
+  - astor=0.7.1
+  - atomicwrites=1.3.0
+  - attrs=19.1.0
+  - backcall=0.1.0
+  - beautifulsoup4=4.7.1
+  - blas=1.0
+  - bleach=3.1.0
+  - blinker=1.4
+  - bokeh=1.1.0
+  - boto=2.49.0
+  - boto3=1.9.134
+  - botocore=1.12.134
+  - bz2file=0.98
+  - ca-certificates=2019.3.9
+  - certifi=2019.3.9
+  - cffi=1.12.3
+  - chardet=3.0.4
+  - click=7.0
+  - cryptography=2.6.1
+  - cycler=0.10.0
+  - cymem=2.0.2
+  - cytoolz=0.9.0.1
+  - dbus=1.13.6
+  - decorator=4.4.0
+  - defusedxml=0.5.0
+  - dill=0.2.9
+  - docutils=0.14
+  - entrypoints=0.3
+  - expat=2.2.6
+  - flask=1.0.2
+  - flask-cors=3.0.7
+  - freetype=2.9.1
+  - future=0.17.1
+  - gast=0.2.2
+  - gensim=3.4.0
+  - gettext=0.19.8.1
+  - glib=2.56.2
+  - glm=0.9.9.4
+  - grpcio=1.12.1
+  - gunicorn=19.9.0
+  - h5py=2.9.0
+  - hdf5=1.10.4
+  - icu=58.2
+  - idna=2.8
+  - imbalanced-learn=0.4.3
+  - intel-openmp=2019.3
+  - ipykernel=5.1.0
+  - ipython=7.4.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.4.2
+  - itsdangerous=1.1.0
+  - jedi=0.13.3
+  - jinja2=2.10.1
+  - jmespath=0.9.4
+  - joblib=0.13.2
+  - jpeg=9b
+  - jsonschema=3.0.1
+  - jupyter=1.0.0
+  - jupyter_client=5.2.4
+  - jupyter_console=6.0.0
+  - jupyter_contrib_core=0.3.3
+  - jupyter_contrib_nbextensions=0.5.1
+  - jupyter_core=4.4.0
+  - jupyter_highlight_selected_word=0.2.0
+  - jupyter_latex_envs=1.4.4
+  - jupyter_nbextensions_configurator=0.4.1
+  - keras=2.2.4
+  - keras-applications=1.0.4
+  - keras-preprocessing=1.0.2
+  - kiwisolver=1.0.1
+  - krb5=1.16.1
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20181209
+  - libffi=3.2.1
+  - libgfortran=3.0.1
+  - libgpuarray=0.7.6
+  - libiconv=1.15
+  - libpng=1.6.36
+  - libpq=11.2
+  - libprotobuf=3.7.1
+  - libsodium=1.0.16
+  - libtiff=4.0.9
+  - libxgboost=0.82
+  - libxml2=2.9.8
+  - libxslt=1.1.32
+  - line_profiler=2.1.2
+  - llvm-openmp=4.0.1
+  - lxml=4.3.3
+  - mako=1.0.7
+  - markdown=2.6.11
+  - markupsafe=1.1.1
+  - matplotlib=3.0.3
+  - matplotlib-base=3.0.3
+  - memory_profiler=0.55.0
+  - metis=5.1.0
+  - mistune=0.8.4
+  - mkl=2019.3
+  - mkl_fft=1.0.12
+  - mkl_random=1.0.2
+  - mlxtend=0.13.0
+  - more-itertools=4.3.0
+  - msgpack-numpy=0.4.3.2
+  - msgpack-python=0.6.1
+  - murmurhash=1.0.0
+  - nbconvert=5.4.1
+  - nbformat=4.4.0
+  - ncurses=6.1
+  - nltk=3.4.1
+  - nose=1.3.7
+  - notebook=5.7.8
+  - numpy=1.16.2
+  - numpy-base=1.16.2
+  - oauthlib=3.0.1
+  - olefile=0.46
+  - openssl=1.1.1b
+  - packaging=19.0
+  - pandas=0.24.2
+  - pandoc=2.2.3.2
+  - pandocfilters=1.4.2
+  - parso=0.4.0
+  - patsy=0.5.1
+  - pcre=8.43
+  - pexpect=4.7.0
+  - pickleshare=0.7.5
+  - pillow=5.4.1
+  - pip=19.1
+  - plac=0.9.6
+  - pluggy=0.9.0
+  - preshed=2.0.1
+  - progressbar2=3.38.0
+  - prometheus_client=0.6.0
+  - prompt_toolkit=2.0.9
+  - protobuf=3.7.1
+  - psutil=5.6.1
+  - psycopg2=2.8.2
+  - ptyprocess=0.6.0
+  - py=1.8.0
+  - py-xgboost=0.82
+  - pycparser=2.19
+  - pygam=0.8.0
+  - pygments=2.3.1
+  - pygpu=0.7.6
+  - pyjwt=1.7.1
+  - pymongo=3.7.2
+  - pyopenssl=19.0.0
+  - pyparsing=2.4.0
+  - pyqt=5.9.2
+  - pyrsistent=0.14.11
+  - pysocks=1.6.8
+  - pytest=4.4.1
+  - pytest-runner=4.4
+  - python=3.6.8
+  - python-dateutil=2.8.0
+  - python-utils=2.3.0
+  - pytz=2019.1
+  - pyyaml=5.1
+  - pyzmq=18.0.1
+  - qt=5.9.7
+  - qtconsole=4.4.3
+  - readline=7.0
+  - regex=2018.01.10
+  - requests=2.21.0
+  - requests-oauthlib=1.2.0
+  - retrying=1.3.3
+  - s3transfer=0.2.0
+  - scikit-learn=0.20.3
+  - scikit-sparse=0.4.4
+  - scikit-surprise=1.0.6
+  - scipy=1.2.1
+  - seaborn=0.9.0
+  - selenium=3.141.0
+  - send2trash=1.5.0
+  - setuptools=41.0.0
+  - sip=4.19.8
+  - six=1.12.0
+  - smart_open=1.8.2
+  - soupsieve=1.9.1
+  - spacy=2.0.18
+  - sqlalchemy=1.3.3
+  - sqlite=3.27.2
+  - statsmodels=0.9.0
+  - suitesparse=5.2.0
+  - tbb=2019.4
+  - tensorboard=1.10.0
+  - tensorflow=1.10.0
+  - termcolor=1.1.0
+  - terminado=0.8.2
+  - testpath=0.4.2
+  - theano=1.0.3
+  - thinc=6.12.1
+  - tk=8.6.8
+  - toolz=0.9.0
+  - tornado=6.0.2
+  - tqdm=4.32.0
+  - traitlets=4.3.2
+  - tweepy=3.6.0
+  - ujson=1.35
+  - urllib3=1.24.2
+  - wcwidth=0.1.7
+  - webencodings=0.5.1
+  - werkzeug=0.15.2
+  - wheel=0.33.1
+  - widgetsnbextension=3.4.2
+  - wrapt=1.10.11
+  - xgboost=0.82
+  - xlrd=1.2.0
+  - xz=5.2.4
+  - yaml=0.1.7
+  - zeromq=4.3.1
+  - zlib=1.2.11
   - pip:
     - de-core-news-sm==2.0.0
     - en-core-web-lg==2.0.0
